{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 387,
  "lineage": "30af02c9-ca70-9630-c6bf-10c178c1f91a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:internet-gateway/igw-0f74f74445528018b",
            "id": "igw-0f74f74445528018b",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f74f74445528018b",
            "id": "r-rtb-0f619872eea31360c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f619872eea31360c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:route-table/rtb-00177c50564aebe0c",
            "id": "rtb-00177c50564aebe0c",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vault private"
            },
            "tags_all": {
              "Name": "Vault private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:route-table/rtb-0f619872eea31360c",
            "id": "rtb-0f619872eea31360c",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vault public"
            },
            "tags_all": {
              "Name": "Vault public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080e76d8a051322a6",
            "route_table_id": "rtb-00177c50564aebe0c",
            "subnet_id": "subnet-0f01c19db2edcd39c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a44901a85727815",
            "route_table_id": "rtb-00177c50564aebe0c",
            "subnet_id": "subnet-08aef8b7d38df2c36"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b69708c6e75cbf3",
            "route_table_id": "rtb-00177c50564aebe0c",
            "subnet_id": "subnet-090724d01db5c3ced"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c099f2ac1d743b27",
            "route_table_id": "rtb-0f619872eea31360c",
            "subnet_id": "subnet-0f1568ffcd90b9f03"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f463a905c34426de",
            "route_table_id": "rtb-0f619872eea31360c",
            "subnet_id": "subnet-0bd4f9cb562a4eac7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0625ad71e93235787",
            "route_table_id": "rtb-0f619872eea31360c",
            "subnet_id": "subnet-0e169897f3ca481e3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-0f01c19db2edcd39c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f01c19db2edcd39c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-08aef8b7d38df2c36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aef8b7d38df2c36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-090724d01db5c3ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090724d01db5c3ced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-0f1568ffcd90b9f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1568ffcd90b9f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-0bd4f9cb562a4eac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd4f9cb562a4eac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:subnet/subnet-0e169897f3ca481e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e169897f3ca481e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0708ffbe8263c0ed3"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900131238574:vpc/vpc-0708ffbe8263c0ed3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c174a1edd6161f75",
            "default_route_table_id": "rtb-04e53d479dd5b715d",
            "default_security_group_id": "sg-0904aad3d52b045c0",
            "dhcp_options_id": "dopt-42b6852b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0708ffbe8263c0ed3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e53d479dd5b715d",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            }
          }
        }
      ]
    }
  ]
}